--- a/index.html
+++ b/index.html
@@ -4,9 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,0,0">
+    <script src="script.js" defer></script>
     <title>Image Slider</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="slider-container">
+            <button id="prev-slide" class="slide-button material-symbols-rounded">chevron_left</button>
+            <div class="image-list">
+                <img src="images/one.jpg" alt="img-1" class="image-item">
+                <img src="images/two.jpg" alt="img-2" class="image-item">
+                <img src="images/three.jpg" alt="img-3" class="image-item">
+                <img src="images/four.jpg" alt="img-4" class="image-item">
+                <img src="images/five.jpg" alt="img-5" class="image-item">
+                <img src="images/six.jpg" alt="img-6" class="image-item">
+                <img src="images/seven.jpg" alt="img-7" class="image-item">
+                <img src="images/eight.jpg" alt="img-8" class="image-item">        
+            </div>
+            <button id="next-slide" class="slide-button material-symbols-rounded">chevron_right</button>
+
+        </div>
+        <div class="scrollbar">
+            <div class="scrollbar-tracker">
+                <div class="scrollbar-thumb"></div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
